added option to get dailies from specific id
