# swagger.yml
@@ -29,6 +29,10 @@ paths:
           in: query
           type: integer
           format: int64
+        - name: from
+          in: query
+          type: integer
+          format: int64
       responses:
         200:
           description: list of daily items since given id
